--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" countent="width=device=width, initial-scale=1.0">
     <meta gttp-equiv="X-UA-Compatible" content="ie=edge">
-    <title>我的首頁</title>
+    <title>均均的課程教學</title>
 </head>
+<body>
+    <div style="padding: top 30px;text-align:center;font-size:40px;font-weight:bold;color:white;background-color:rgb(87, 112, 255)">均均的課程教學</div>
+</body>
+</html>
