--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta gttp-equiv="X-UA-Compatible" content="ie=edge">
     <title>均均的課程教學</title>
 </head>
-<body>
+<body style="margin:0px">
     <div style="padding: top 30px;text-align:center;font-size:40px;font-weight:bold;color:white;background-color:rgb(87, 112, 255)">均均的課程教學</div>
 </body>
 </html>
